--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             // Fetch API call to get text file content
             fetch(' sample.txt')
             
-            // Old way of handling promises (commented out)
+            // Old way of handling promises
             // .then(function(res){
             //     return res.text()
             // .then(function(data){
